samples/_failures_safe/1761484165_21f4b6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d40ab3f5.c: In function ‘analyze_results’:
./samples/SAFE/__tmp_d40ab3f5.c:153:66: error: ‘struct TextAnalyzer’ has no member named ‘total’
  153 |         result->avg_word_length = (double)total_length / analyzer->total
      |                                                                  ^~
./samples/SAFE/__tmp_d40ab3f5.c:153:73: error: expected ‘;’ at end of input
  153 |         result->avg_word_length = (double)total_length / analyzer->total
      |                                                                         ^
      |                                                                         ;
./samples/SAFE/__tmp_d40ab3f5.c:153:9: error: expected declaration or statement at end of input
  153 |         result->avg_word_length = (double)total_length / analyzer->total
      |         ^~~~~~
./samples/SAFE/__tmp_d40ab3f5.c:153:9: error: expected declaration or statement at end of input
